--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,12 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-        <activity android:name=".Main" />
-        <activity android:name=".newaccount" />
+        <activity
+            android:name=".Main"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".newaccount"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            />
         <activity
             android:name=".user.The_user_profile"
             android:label="@string/title_activity_the_user_profile"
@@ -33,7 +37,10 @@
         <activity android:name=".user.myorders" />
         <activity android:name=".user.editpassword" />
         <activity android:name=".user.Order_click_details" />
-        <activity android:name=".Launcher">
+        <activity
+            android:name=".Launcher"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
