--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.github.clans:fab:1.6.4'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
